--- a/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
+++ b/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="FPS.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main_ray_tracing.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Includes.h">
