[Update] add PBR IBL irradiance map

--- a/Test_PBR/Test_PBR.vcxproj
+++ b/Test_PBR/Test_PBR.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="shader.h" />
+    <ClInclude Include="shader_irradiance.h" />
+    <ClInclude Include="shader_pbr.h" />
+    <ClInclude Include="shader_skybox.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
