--- a/Test_PBR/Test_PBR.vcxproj.filters
+++ b/Test_PBR/Test_PBR.vcxproj.filters
@@ -18,6 +18,15 @@
     <ClInclude Include="shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="shader_skybox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="shader_pbr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="shader_irradiance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
