--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="main_rayTracing_file.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="main2.cpp">
+    <ClCompile Include="main_rasterizer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="temp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
