--- a/Test_PBR/Test_PBR.vcxproj
+++ b/Test_PBR/Test_PBR.vcxproj
@@ -143,11 +143,17 @@
   <ItemGroup>
     <ClInclude Include="shader.h" />
     <ClInclude Include="shader_irradiance.h" />
+    <ClInclude Include="shader_only_direct.h" />
     <ClInclude Include="shader_pbr.h" />
     <ClInclude Include="shader_skybox.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="main_direct.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
