--- a/Test_PBR/Test_PBR.vcxproj.filters
+++ b/Test_PBR/Test_PBR.vcxproj.filters
@@ -30,12 +30,24 @@
     <ClInclude Include="shader_only_direct.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="shader_gamma.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="shader_hdr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main_direct.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main_gamma.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main_hdr.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
