--- a/Test_PBR/Test_PBR.vcxproj.filters
+++ b/Test_PBR/Test_PBR.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="shader_hdr.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="shader_indirect_diffuse.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main_hdr.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main_indirect_diffuse.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
