[Update] Test_PBR

--- a/Test_PBR/Test_PBR.vcxproj
+++ b/Test_PBR/Test_PBR.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="shader.h" />
+    <ClInclude Include="shader_diff_roughness.h" />
     <ClInclude Include="shader_gamma.h" />
     <ClInclude Include="shader_hdr.h" />
     <ClInclude Include="shader_indirect_diffuse.h" />
@@ -154,6 +155,9 @@
     <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="main_diff_roughness.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="main_direct.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -163,7 +167,9 @@
     <ClCompile Include="main_hdr.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="main_indirect_diffuse.cpp" />
+    <ClCompile Include="main_indirect_diffuse.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
