--- a/Test_PBR/Test_PBR.vcxproj.filters
+++ b/Test_PBR/Test_PBR.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="shader_diff_roughness.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="shader_indirect.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main_diff_roughness.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main_indirect.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
